# NBA-Front-Office-Intelligence-Platform

./: .env.example  .gitignore  CLAUDE.md  HANDOFF-roster-lab-issues.md  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: frontend-architect.md
.impeccable/critique/: 2026-07-24T00-56-10Z__frontend-src-app-page-tsx.md
backend/: __init__.py
backend/api/: __init__.py  app.py  errors.py  lookups.py  openapi.json  openapi_export.py  schemas.py
backend/domain/: __init__.py  errors.py  models.py
backend/fixtures/: __init__.py  historical_loader.py
backend/minutes/: __init__.py  allocator.py
backend/providers/: __init__.py  base.py  raptor_benchmark.py  synthetic.py
backend/scenario/: __init__.py  service.py
data_pipeline/: __init__.py  audit.py
docs/: data-source-evaluation.md  ml-specification.md  project-specification.md  scenario-engine.md  testing-strategy.md
docs/architecture/: README.md
docs/data-audits/: README.md  fivethirtyeight-nba-elo-audit.md  fivethirtyeight-nba-elo-games.md  fivethirtyeight-raptor-audit.md  fivethirtyeight-raptor-historical-by-player.md  fivethirtyeight-raptor-historical-by-team.md  fivethirtyeight-raptor-modern-by-player.md
docs/decisions/: 0001-historical-data-source.md  0002-environment-and-toolchain.md  0003-internal-player-impact-target.md  0004-pce-data-source-options.md  0005-historical-only-product-scope.md  0006-historical-pce-data-source.md  0007-fully-free-historical-prototype.md  0009-editable-scenario-minutes.md  (+3 more)
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
scripts/: audit_data_source.py  export_openapi_schema.py
tests/: test_api_cors.py  test_api_lookups.py  test_api_scenarios.py  test_audit.py  test_contribution_providers.py  test_historical_loader.py  test_minutes_allocator.py  test_scenario_service.py
workflows/: audit-data-source.md  build-basic-roster-scenario.md  build-player-projection.md  initialize-project.md  review-pull-request.md
(+46 files in other folders)
