[project]
name = "nba-intelligence-platform"
version = "0.1.0"
description = "NBA Front Office Intelligence Platform — player projections and roster scenarios"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.2",
    "pandas>=2.2",
    "pyarrow>=16",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.2",
    "httpx2>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_pipeline", "backend"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["frontend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["data_pipeline", "backend", "scripts", "tests"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
